# SurveyCTO

./: .gitignore  Installer.iss  LICENSE  Prompt.json  README.md  installer.py  pyproject.toml
.github/ISSUE_TEMPLATE/: question.yaml
prompts/: Prompt.md  fixed_rows.yaml  parse_module.yaml
src/: app.py
src/config/: compiler.py  lang.py  pipeline.py  theme.py
src/models/: survey.py
src/pipeline/: compiler.py  parser.py  splitter.py
src/ui/: controller.py  language_input.py
src/utils/: keyring.py  logger.py
tests/: debug_splitter.py  test_parser.py  test_pipeline.py  test_splitter.py
