[project]
name = "automate"
version = "0.1.0"
description = "SurveyCTO convertor"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "customtkinter>=6.0.0",
    "keyring>=25.7.0",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "openpyxl>=3.1.5",
    "pillow>=12.3.0",
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
]

[tool.uv]
dev-dependencies = ["pytest"] 
[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--import-mode=importlib"